  do_replace_loop()
	- When moving to the next match, update the screen using
	  edit_refresh() instead of edit_redraw(), as the latter won't
	  work properly when we've replaced one or more instances of a
	  string in copy and haven't yet updated current->data to match
	  copy. (DLR)
- utils.c:
  num_of_digits()
	- Use a size_t instead of an int, and rename to digits(). (DLR)
- winio.c:
  do_statusbar_output()
	- Don't set answer_len until after it's been asserted that
	  answer isn't NULL. (DLR)
  display_string()
	- Avoid a memory corruption problem by allocating enough space
	  for len plus a trailing multibyte character and/or tab. (DLR)
	- Don't check for multicolumn characters if the NO_UTF8 flag
	  isn't set. (DLR)
  nanogetstr()
	- Rename variable def to curranswer to avoid confusion. (DLR)
	- Only declare and use the tabbed variable if DISABLE_TABCOMP
	  isn't defined. (DLR)
	- Refactor to replace unnecessary variable answer_len with
	  curranswer_len, and hence avoid an assertion failure involving
	  the former. (DLR)
  statusq()
	- Rename variable which_history to history_list, for
	  consistency. (DLR)
	- Rename variables def and ret to curranswer and retval to avoid
	  confusion. (DLR)
  do_help()
	- Don't treat NANO_CANCEL_KEY as NANO_EXIT_KEY anymore, for
	  consistency. (DLR)
  do_yesno()
	- Allow refreshing the screen via Ctrl-L, as Pico does. (DLR)
  total_update()
	- Simplify to call clearok(TRUE) and wrefresh() on edit, which
	  updates the entire screen in fewer function calls. (DLR)
  do_replace_highlight()
	- Use waddch() instead of waddstr() to display a space when we
	  have a zero-length regex. (DLR)
  do_credits()
	- Save the keystroke that breaks us out of the credits (if any)
	  and put it back so that it isn't lost.  This is especially
	  needed if the keystroke is part of a multibyte character.
	  (DLR)
- nanorc.5:
	- Update the description of how the "color" regex works. (DLR)
- configure.ac: